--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
       </main>
       <footer>
-        &copy;2020 by Taskinator
+        &copy;2020 by Taskinator footer
       </footer>
       <script src="./assets/js/script.js"></script>
 </body>
